# stream-man

./: .gitignore  .pre-commit-config.yaml  INSTALL.txt  README.md  pyproject.toml
stream_man/: _activate_django.py  manage.py
stream_man/common/: __init__.py  abstract_scraper.py  base_scraper.py  constants.py  credential_mangement.py  extended_re.py  get_scraper.py  scraper_functions.py  scrapers.py
stream_man/media/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
stream_man/media/migrations/: 0001_initial.py  0002_episode_url.py  0003_alter_show_media_type.py  0004_season_number.py  0005_alter_updateque_table.py  0006_episode_air_date.py  0007_episode_image.py  0008_remove_episode_image_url_and_more.py  0009_remove_season_image_url_remove_season_thumbnail_url_and_more.py  0010_remove_season_number.py  0011_season_number.py  0012_alter_show_description.py  0013_alter_episode_options_alter_episodewatch_options_and_more.py  0014_alter_episode_image_alter_season_image_and_more.py  0015_remove_show_favicon_url_show_favicon.py  0016_alter_show_media_type_alter_show_name_and_more.py  0017_season_update_at.py  0018_episode_update_at.py  0019_rename_update_at_episode_update_info_at_and_more.py
stream_man/media/templates/media/: index.html  mark_episode_watched_form.html
stream_man/media/templates/media/forms/: mark_episode_watched_form.html
stream_man/playlists/: __init__.py  admin.py  apps.py  builder.py  forms.py  models.py  tests.py  urls.py  views.py
stream_man/playlists/migrations/: 0001_initial.py  0002_alter_playlist_options_playlist_deleted.py  0003_alter_playlist_table.py  0004_alter_playlist_default_filter.py  0005_remove_playlistshow_playlist_season_and_more.py  0006_playlist_thumbnail_alter_playlist_default_filter.py  0007_alter_playlist_thumbnail.py  0008_alter_playlist_thumbnail.py  0009_remove_playlistimportqueue_playlistimportqueue_playlist_url_and_more.py  0010_alter_playlist_thumbnail.py  0011_alter_playlistimportqueue_url.py  0012_alter_playlist_options.py
stream_man/playlists/templates/playlists/: add_show_form.html  edit_playlist_form.html  episode_info_footer.html  new_playlist_form.html  playlist.html  playlists.html  remove_show_form.html  visual_config_form.html
stream_man/playlists/templates/playlists/cards/: episodes.html  playlists.html
stream_man/playlists/templates/playlists/forms/: add_show.html  edit_playlist.html  filter_episodes.html  new_playlist.html  remove_show.html  visual_config.html
stream_man/playlists/templatetags/: playlist_tags.py
stream_man/scrapers/: NOTES.md  americas_test_kitchen.py  crunchyroll.py  crunchyroll_movie.py  crunchyroll_series.py  crunchyroll_shared.py  discovery_plus.py  netflix.py  youtube.py  youtube_playlist.py
stream_man/scrapers/CrunchyRoll/: __init__.py  crunchyroll_movie.py  crunchyroll_series.py  crunchyroll_shared.py
stream_man/scrapers/Outdated/: americas_test_kitchen.py  discovery_plus.py  netflix.py
stream_man/secret_management/: add_secret.py  dump.py
stream_man/static/: functions.js  functions.ts
stream_man/stream_man/: _activate_django.py  asgi.py  settings.py  urls.py  wsgi.py
stream_man/templates/: footer.html  head.html  header.html  toast.html
stream_man/tests/: Crunchyroll_GJKF27X8M.json  Crunchyroll_GY2P9ED0Y.json  Crunchyroll_GYVNXMVP6.json  Discovery+_mythbusters.json  Discovery+_prisoner-of-the-prophet-us.json  Discovery+_roar-the-most-dangerous-movie-ever-made.json  Discovery+_the-killing-season-us.json  scraper_test_base.py  test_crunchyroll.py  test_discovery_plus.py
stream_man/utils/: Crunchyroll_GJKF27X8M.json  import_que.py  make_no_thumbnail_image.py  manual_login.py  re_import.py
stream_man/utils/credentials/: add.py
stream_man/utils/dev/: docstring_sync.py  dump_single.py  re_import.py  single.py
stream_man/utils/single_use/: make_no_thumbnail_image.py
