[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
disable = [
    "C0301", # line-too-long: Black makes this redundant
    "E1101", # no-member: Black makes thie redundant and it sometimes has false positives
    "E0307", # invalid-str-returned: Black makes this redundant and it sometimes has false positives
    "E0611", # invalid-str-returned: Black makes this redundant and it sometimes has false positives
    "E0401", # import-error: Black makes this redundant and it has false positives because it does not use PYTHONPATH
]

[tool.poetry]
name = "stream_man"
version = "0.0.1"
description = "Single user version of stream manager"
authors = ["26b_dream <1@1.1>"]
readme = "README.md"
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2"
playwright = "^1.34"
playwright-stealth = "^1.0.5"

django_model_helpers = { git = "https://github.com/26b-dream/django-model-helpers" }
json_file = { git = "https://github.com/26b-dream/json-file" }
html_file = { git = "https://github.com/26b-dream/html-file" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pylint = "^2.17.4"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
